# GeniusWallet

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  INSTALL.md  README.md  analysis_options.yaml  build.bat  build.sh  gencode.sh  install_flutter.bat  install_flutter.sh  pubspec.yaml  run.bat  run.sh  rundebug.bat  rundebug.sh  runrelease.bat  runrelease.sh
.github/workflows/: build-manual.yml  build-release-tags.yml  build.yml
Assets/: GeniusTokensAppBarTest.sketch  bitcoin-screen-test.sketch
android/: build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  _CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/ai/gnus/genius_wallet/: MainActivity.kt
android/app/src/main/kotlin/com/example/GeniusWallet/: MainActivity.kt
android/app/src/main/kotlin/com/example/genius_wallet/: MainActivity.kt
android/app/src/main/kotlin/com/example/gw_gui/: MainActivity.kt
android/app/src/main/kotlin/com/example/my_project/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/profile/: AndroidManifest.xml
assets/: dev_config.json
assets/data/: frisbee3.data
assets/json/: readme.md
cmake/: CommonBuildParameters.cmake  CommonCompilerOptions.cmake  CommonOverrideFlags.cmake  DownloadDependencies.cmake  Utilities.cmake
ios/Flutter/: .last_build_id
ios/Runner/: ExportOptions.plist  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/native/: CMakeCache.txt  CMakeLists.txt  GeniusWallet_Info.plist  cmake_install.cmake
lib/: ffi_bridge.dart  ffi_bridge_prebuilt.dart  index.dart  main.dart  main_widgetbook.g.dart  publishWallets.py  wallet_cubits_intializer.dart
lib/GeniusContract/: chain.pb.dart  chain.pbenum.dart  chain.pbjson.dart  chain.pbserver.dart  entity.pb.dart  entity.pbenum.dart  entity.pbjson.dart
lib/account/: account_dropdown_selector.dart
lib/assets/: assets.dart  read_asset.dart
lib/backup_phrase/: backup_phrase_model.dart  backup_phrase_widget.dart
lib/banaxa/: banaxa_api_services.dart  banaxa_buy_screen.dart  banaxa_model.dart  banaxa_orders_history.dart  banaxa_payment.dart  banxa_service.dart  buy_cancelled_drawer.dart  buy_gnus_button.dart  buy_gnus_screen.dart  buy_success_drawer.dart  buy_success_drawer_content.dart  checkout_qr.dart  deep_link_service.dart  handle_banaxa_drawer.dart  handle_banxa_redirect.dart  order_details_page.dart
lib/banxa/: banaxa_api_services.dart  banaxa_buy_screen.dart  banaxa_orders_history.dart  banaxa_payment.dart  banxa_service.dart  buy_cancelled_drawer.dart  buy_gnus_button.dart  buy_gnus_screen.dart  buy_success_drawer.dart  checkout_qr.dart  handle_banxa_redirect.dart  order_details_page.dart
lib/banxa_order/: banxa_order_cubit.dart  banxa_order_state.dart  create_order_cubit.dart  create_order_state.dart  polling_order_cubit.dart
lib/bitcoin_wallet/: bitcoin_wallet_model.dart  bitcoin_wallet_widget.dart
lib/bloc/: app_bloc.dart  pin_cubit.dart  pin_state.dart
lib/calculator/: calculator_model.dart  calculator_widget.dart
lib/chart/: crypto_live_chart.dart  crypto_minimal_chart.dart  crypto_simple_chart.dart
lib/components/: action_button.dart  app_screen_view.dart  app_screen_with_header_desktop.dart  app_screen_with_header_mobile.dart  currency_dropdown.dart  custom_drop_down.dart  custom_future_builder.dart  desktop_body_container.dart  desktop_container.dart  disclaimer_dialogue.dart  genius_back_button.g.dart  number_pad.dart  pulsing_skeleton.dart  recoveryword.g.dart  registration_header.g.dart  responsive_grid.dart  sliding_drawer_button.dart  splash.dart  string_button.dart  text_entry_field.g.dart  text_entry_field_widget.g.dart  text_form_field_logic.g.dart  wallet_agreement.g.dart  wallet_card.g.dart  wallet_information.g.dart  wallet_preview.g.dart  wallets_overview.g.dart
lib/controller/: about_button_custom.dart  amount_and_subtext_custom.dart  back_arrow_custom.dart  buy.dart  buy_button_custom.dart  buy_crypto_button_custom.dart  dex_tab.dart  exit_button_custom.dart  genius_checkbox_custom.dart  gnus_amount_selector_custom.dart  max_e_t_h.dart  next.dart  paste.dart  price_slider.dart  protocol_selector_custom.dart  recipient_address.dart  send_button_custom.dart  settings_tab.dart
lib/copy_phase/: copy_phase_model.dart  copy_phase_widget.dart
lib/cubits/: wallet_balance_cubit.dart
lib/cypto_news/: cypto_news_model.dart  cypto_news_widget.dart
lib/egg/: aboutbuttoncustom.dart  amount.dart  arrow.dart  (+37 more)
linux/: CMakeLists.txt  app_configuration.mk  my_application.cc  window_configuration.cc
macos/: .gitignore  CMakeCache.txt  Podfile
native/: libadd.dylib
src/: CMakeLists.txt  native.cpp  native_tw_account.cpp  native_tw_aes.cpp  native_tw_anyaddress.cpp  native_tw_anysigner.cpp  native_tw_base32.cpp  native_tw_base58.cpp  native_tw_base64.cpp  native_tw_bitcoinaddress.cpp  native_tw_bitcoinscript.cpp  native_tw_bitcoinsighash.cpp  native_tw_btcmsgsigner.cpp  native_tw_cardano.cpp  native_tw_cointype.cpp  native_tw_cointypecfg.cpp  native_tw_data.cpp  native_tw_datavector.cpp  native_tw_derivationpath.cpp  native_tw_derivationpathidx.cpp  native_tw_ethabifunction.cpp  native_tw_ethereum.cpp  native_tw_ethereumabi.cpp  native_tw_ethereumabivalue.cpp  native_tw_ethmsgsigner.cpp  native_tw_filecoin.cpp  native_tw_fioaccount.cpp  native_tw_groestlcoinaddr.cpp  native_tw_hash.cpp  native_tw_hdversion.cpp  native_tw_hdwallet.cpp  native_tw_hrp.cpp  native_tw_mnemonic.cpp  native_tw_nearaccount.cpp  native_tw_nervosaddress.cpp  native_tw_pbkdf2.cpp  native_tw_privatekey.cpp  native_tw_publickey.cpp  native_tw_ripplexaddr.cpp  native_tw_segwitaddress.cpp  (+11 more)
test/: CMakeLists.txt  local_wallet_storage_test.dart  token_info_loader_test.dart  trust_wallet_test.dart  widget_test.dart
test/linux/: CMakeLists.txt  build_test_dependencies.sh
tools/: generate_tokens.bat  generate_tokens.sh
web/: index.html  manifest.json
windows/: AppConfiguration.props  CMakeLists.txt  Runner.vcxproj
(+1033 files in other folders)
